# hkmodd.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
scripts/: build-wasm.ps1
src/: App.tsx  index.css
src/components/: AIIntel.tsx  Arsenal.tsx  BackToTop.tsx  BootScreen.tsx  CyberCursor.tsx  DeepDiveModal.tsx  ErrorBoundary.tsx  FloatingControls.tsx  Footer.tsx  Hero.tsx  Identity.tsx  MagneticButton.tsx  Navbar.tsx  Operations.tsx  ResetButton.tsx  ScrambledTitle.tsx  Terminal.tsx
src/components/canvas/: DataCore.tsx  FlowField.tsx  NeuralMesh.tsx
src/data/: arsenalDeepDive.ts
src/hooks/: useAutoUpdate.ts  useGitHubRepos.ts  useHolographicTilt.ts  useKonamiCode.ts  useMobileHapticScroll.ts  useNeuralEngine.ts  useScrambleText.ts  useScrollReveal.ts  useSnapScroll.ts
src/i18n/: en.ts  index.ts  it.ts
src/lib/: audio.ts  haptic.ts  parseInlineMarkup.tsx  terminal.ts
src/store/: useAppStore.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
